--- a/index.html
+++ b/index.html
@@ -1,38 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Frontend Mentor | FAQ Accordion Card</title>
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Frontend Mentor | FAQ Accordion Card</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  </head>
+		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+	</head>
 
-  <body>
-    <img class="" src="./images/illustration-woman-online-desktop.svg" alt="" />
-    How many team members can I invite? You can invite up to 2 additional users on the Free plan.
-    There is no limit on team members for the Premium plan. What is the maximum file upload size? No
-    more than 2GB. All files in your account must fit your allotted storage space. How do I reset my
-    password? Click “Forgot password” from the login page or “Change password” from your profile
-    page. A reset link will be emailed to you. Can I cancel my subscription? Yes! Send us a message
-    and we’ll process your request no questions asked. Do you provide additional support? Chat and
-    email support is available 24/7. Phone lines are open during normal business hours.
+	<body>
+		<section class="card">
+			<img
+				src="/images/illustration-box-desktop.svg"
+				alt="orange box"
+				class="card_box"
+				width="160"
+				height="150"
+			/>
+			<div class="card_image">
+				<img
+					class="main_image"
+					src="/images/illustration-woman-online-desktop.svg"
+					alt="woman online desktop"
+					width="400"
+					height="350"
+				/>
+			</div>
+			<div class="card_text">
+				<h1>FAQ</h1>
+				<div class="accordion">
+					<div class="accordion_item">
+						<h2><button class="accordion_question">How many team members can I invite?</button></h2>
+						<div class="accordion_collapse">
+							<div class="accordion_content">
+								You can invite up to 2 additional users on the Free plan. There is no limit on team
+								members for the Premium plan.
+							</div>
+						</div>
+					</div>
+					<div class="accordion_item">
+						<h2>
+							<button class="accordion_question">What is the maximum file upload size?</button>
+						</h2>
+						<div class="accordion_collapse">
+							<div class="accordion_content">
+								No more than 2GB. All files in your account must fit your allotted storage space.
+							</div>
+						</div>
+					</div>
+					<div class="accordion_item">
+						<h2><button class="accordion_question">How do I reset my password?</button></h2>
+						<div class="accordion_collapse">
+							<div class="accordion_content">
+								Click “Forgot password” from the login page or “Change password” from your profile
+								page. A reset link will be emailed to you.
+							</div>
+						</div>
+					</div>
+					<div class="accordion_item">
+						<h2><button class="accordion_question">Can I cancel my subscription?</button></h2>
+						<div class="accordion_collapse">
+							<div class="accordion_content">
+								Yes! Send us a message and we’ll process your request no questions asked.
+							</div>
+						</div>
+					</div>
+					<div class="accordion_item">
+						<h2><button class="accordion_question">Do you provide additional support?</button></h2>
+						<div class="accordion_collapse">
+							<div class="accordion_content">
+								Chat and email support is available 24/7. Phone lines are open during normal
+								business hours.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
-    <script src="script.js"></script>
-  </body>
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+			. Coded by
+			<a href="#">Your Name Here</a>
+			.
+		</div>
+		<script src="script.js"></script>
+	</body>
 </html>
